--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "d3": "^3.5.16",
     "material-design-lite": "^1.3.0",
-    "seedrandom": "^2.4.3"
+    "seedrandom": "^2.4.3",
+    "@types/node": "10.3.1"
   }
 }
