--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "watchify": "^3.11.1"
   },
   "dependencies": {
+    "@types/node": "10.3.1",
+    "ajax": "0.0.4",
     "d3": "^3.5.16",
+    "jquery": "^3.4.1",
     "material-design-lite": "^1.3.0",
-    "seedrandom": "^2.4.3",
-    "@types/node": "10.3.1"
+    "seedrandom": "^2.4.3"
   }
 }
